# mergescribe

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: journal-format.md
examples/: README.md  build_demo_repo.sh  session-journal.jsonl
scripts/: smoke.sh
src/mergescribe/: __init__.py  __main__.py  changelog.py  cli.py  conventional.py  errors.py  evidence.py  filestats.py  gitlog.py  grouping.py  journal.py  prbody.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_conventional.py  test_evidence.py  test_filestats.py  test_gitlog.py  test_grouping.py  test_journal.py  test_prbody.py
